arusignu working