@@ -171,6 +171,37 @@ public class BloopMojo extends ExtendedScalaContinuousCompileMojo {
         if (this.javaCompilerArgs != null) {
             args.addAll( javaCompilerArgs );
         }
+        // args.add("--add-opens");
+        // args.add("java.base/java.io=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/java.lang=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/java.lang.reflect=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/java.net=ALL-UNNAMED");
+        // args.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/sun.nio.ch=ALL-UNNAMED");
+        // args.add("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/java.nio.file=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/java.time=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/java.util=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/sun.util.calendar=ALL-UNNAMED");
+        // args.add("--add-opens");
+        // args.add("java.base/java.util.concurrent=ALL-UNNAMED");
+        // args.add("--add-exports=java.base/sun.nio.ch=ALL-UNNAMED");
+        // args.add("--add-exports");
+        // args.add("java.base/sun.nio.ch=ALL-UNNAMED");
+        // args.add("--add-exports");
+        // args.add("java.base/sun.security.jca=ALL-UNNAMED");
+        // args.add("--add-exports");
+        // args.add("java.base/sun.security.util=ALL-UNNAMED");
+        // args.add("--add-exports");
+        // args.add("java.base/sun.util.calendar=ALL-UNNAMED");
         return args;
     }
 
